Rename logic thread, Increase padding in about section, Remove _root property, Fix wrapping in config editor

--- a/resources/style.css
+++ b/resources/style.css
@@ -85,7 +85,7 @@ scrolledwindow undershoot, scrolledwindow overshoot {
 
 #aboutTitle {
     font-size: medium;
-    padding-bottom: 3px;
+    padding-bottom: 5px;
 }
 #about {
     font-size: small;
